added go sdk generation to makefile, license, and generated go sdk
